--- a/static/assets/sass/base/_typography.scss
+++ b/static/assets/sass/base/_typography.scss
@@ -1,40 +1,24 @@
-@import '../libs/vars';
-@import '../libs/functions';
-@import '../libs/mixins';
-
 ///
-/// Magnetic by Pixelarity
+/// Phantom by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
 
 /* Type */
 
-	html {
-		font-size: 13pt;
-
-		@include breakpoint(xlarge) {
-			font-size: 11pt;
-		}
-
-		@include breakpoint(small) {
-			font-size: 12pt;
-		}
-
-		@include breakpoint(xxsmall) {
-			font-size: 11pt;
-		}
-	}
-
 	body, input, select, textarea {
 		color: _palette(fg);
 		font-family: _font(family);
+		font-size: 16pt;
 		font-weight: _font(weight);
-		font-size: 1em;
-		line-height: 2;
+		line-height: 1.75;
+
+		@include breakpoint(xlarge) {
+			font-size: 14pt;
+		}
 
 		@include breakpoint(large) {
-			line-height: 1.75;
+			font-size: 12pt;
 		}
 	}
 
@@ -43,13 +27,13 @@
 			'border-bottom-color #{_duration(transition)} ease',
 			'color #{_duration(transition)} ease'
 		));
-		border-bottom: dotted 1px transparentize(_palette(fg-bold), 0.65);
-		color: _palette(fg-bold);
 		text-decoration: none;
+		color: _palette(fg);
+		border-bottom: dotted 1px transparentize(_palette(fg), 0.5);
 
 		&:hover {
-			color: _palette(highlight) !important;
 			border-bottom-color: transparent;
+			color: _palette(accent1) !important;
 		}
 	}
 
@@ -66,41 +50,47 @@
 		margin: 0 0 _size(element-margin) 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1 {
+		font-size: 2.75em;
 		color: _palette(fg-bold);
-		font-weight: _font(weight-bold);
-		letter-spacing: _size(letter-spacing);
-		line-height: 1.5;
-		margin: 0 0 (_size(element-margin) * 0.75) 0;
-		text-transform: uppercase;
+		font-weight: _font(weight-bold-alt);
+		line-height: 1.3;
+		margin: 0 0 (_size(element-margin) * 0.5) 0;
+		letter-spacing: _font(letter-spacing-alt);
 
 		a {
 			color: inherit;
-			text-decoration: none;
 		}
 
-		span {
-			font-weight: _font(weight);
+		@include breakpoint(small) {
+			font-size: 2em;
+			margin: 0 0 (_size(element-margin) * 0.5) 0;
+		}
+
+		@include breakpoint(xxsmall) {
+			font-size: 1.75em;
+		}
+	}
+
+	h2, h3, h4, h5, h6 {
+		color: _palette(fg-bold);
+		font-weight: _font(weight-bold);
+		line-height: 1.5;
+		margin: 0 0 (_size(element-margin) * 1) 0;
+		text-transform: uppercase;
+		letter-spacing: _font(letter-spacing);
+
+		a {
+			color: inherit;
 		}
 	}
 
 	h2 {
-		font-size: 1.5em;
-		margin-bottom: (_size(element-margin) * 0.75);
-
-		&:after {
-			content: '';
-			display: block;
-			position: relative;
-			top: 0.75em;
-			width: 3em;
-			height: 1px;
-			background: _palette(fg-bold);
-		}
+		font-size: 1.1em;
 	}
 
 	h3 {
-		font-size: 0.9em;
+		font-size: 1em;
 	}
 
 	h4 {
@@ -115,15 +105,21 @@
 		font-size: 0.8em;
 	}
 
-	@include breakpoint(large) {
-		h2 {
-			font-size: 1.25em;
+	@include breakpoint(medium) {
+		h1, h2, h3, h4, h5, h6 {
+			br {
+				display: none;
+			}
 		}
 	}
 
 	@include breakpoint(small) {
 		h2 {
-			font-size: 1.1em;
+			font-size: 1em;
+		}
+
+		h3 {
+			font-size: 0.8em;
 		}
 	}
 
@@ -140,7 +136,7 @@
 	}
 
 	blockquote {
-		border-left: solid 4px _palette(border);
+		border-left: solid (_size(border-width) * 4) _palette(border);
 		font-style: italic;
 		margin: 0 0 _size(element-margin) 0;
 		padding: (_size(element-margin) / 4) 0 (_size(element-margin) / 4) _size(element-margin);
@@ -148,10 +144,12 @@
 
 	code {
 		background: _palette(border-bg);
+		border-radius: _size(border-radius);
+		border: solid _size(border-width) _palette(border);
 		font-family: _font(family-fixed);
 		font-size: 0.9em;
 		margin: 0 0.25em;
-		padding: 0.5em 0.65em;
+		padding: 0.25em 0.65em;
 	}
 
 	pre {
@@ -162,7 +160,7 @@
 
 		code {
 			display: block;
-			line-height: 1.75em;
+			line-height: 1.75;
 			padding: 1em 1.5em;
 			overflow-x: auto;
 		}
@@ -170,11 +168,11 @@
 
 	hr {
 		border: 0;
-		border-bottom: solid 1px _palette(border);
-		margin: (_size(element-margin) * 1.5) 0;
+		border-bottom: solid _size(border-width) _palette(border);
+		margin: _size(element-margin) 0;
 
 		&.major {
-			margin: (_size(element-margin) * 2.5) 0;
+			margin: (_size(element-margin) * 1.5) 0;
 		}
 	}
 
