--- a/static/assets/sass/components/_form.scss
+++ b/static/assets/sass/components/_form.scss
@@ -1,9 +1,5 @@
-@import '../libs/vars';
-@import '../libs/functions';
-@import '../libs/mixins';
-
 ///
-/// Magnetic by Pixelarity
+/// Phantom by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -11,11 +7,65 @@
 /* Form */
 
 	form {
-		margin: 0 0 _size(element-margin) 0;
+		margin: (_size(element-margin) * -0.5) 0 _size(element-margin) 0;
+
+		&:after {
+			content: '';
+			display: block;
+			clear: both;
+			height: 1px;
+		}
+
+		.field {
+			position: relative;
+			float: left;
+			margin: 0 0 (_size(element-margin) * 0.65) 0;
+			vertical-align: top;
+			width: 100%;
+		}
+
+		.half {
+			width: calc(50% + #{_size(field-gutter) * 0.5}) !important;
+			padding-left: _size(field-gutter);
+		}
+
+		.half.first {
+			width: calc(50% - #{_size(field-gutter) * 0.5}) !important;
+			padding-left: 0;
+		}
+
+		:last-child {
+			margin-bottom: 0;
+		}
+
+		.half:nth-last-child(2) {
+			margin-bottom: 0;
+		}
+
+		.actions {
+			position: relative;
+			clear: both;
+			padding-top: (_size(element-margin) * 0.5);
+		}
+
+		@include breakpoint(xsmall) {
+			.half {
+				width: 100% !important;
+				padding-left: 0;
+			}
+
+			.half.first {
+				width: 100% !important;
+				padding-left: 0;
+			}
+
+			.half:nth-last-child(2) {
+				margin: 0 0 (_size(element-margin) * 0.65) 0;
+			}
+		}
 	}
 
 	label {
-		color: _palette(fg-bold);
 		display: block;
 		font-size: 0.9em;
 		font-weight: _font(weight-bold);
@@ -29,13 +79,14 @@
 	select,
 	textarea {
 		@include vendor('appearance', 'none');
-		background: _palette(border-bg);
+		background-color: transparent;
 		border: none;
 		border-radius: 0;
+		border-bottom: solid _size(border-width) _palette(border);
 		color: inherit;
 		display: block;
 		outline: 0;
-		padding: 0 1.25em;
+		padding: 0;
 		text-decoration: none;
 		width: 100%;
 
@@ -44,7 +95,8 @@
 		}
 
 		&:focus {
-			box-shadow: inset 0 0 0 2px _palette(highlight);
+			border-bottom-color: _palette(accent1);
+			box-shadow: inset 0 -1px 0 0 _palette(accent1);
 		}
 	}
 
@@ -54,8 +106,8 @@
 		position: relative;
 
 		&:before {
+			color: _palette(border);
 			content: '\f078';
-			color: _palette(fg-bold);
 			display: block;
 			height: _size(element-height);
 			line-height: _size(element-height);
@@ -80,7 +132,8 @@
 	}
 
 	textarea {
-		padding: 1em 1.5em;
+		padding: 0;
+		min-height: (_size(element-height) * 1.25);
 	}
 
 	input[type="checkbox"],
@@ -105,7 +158,8 @@
 			position: relative;
 
 			&:before {
-				background: _palette(border-bg);
+				border-radius: _size(border-radius);
+				border: solid _size(border-width) _palette(border);
 				content: '';
 				display: inline-block;
 				height: (_size(element-height) * 0.6);
@@ -120,14 +174,17 @@
 
 		&:checked + label {
 			&:before {
-				color: _palette(fg-bold);
+				background: _palette(fg);
+				border-color: _palette(fg);
+				color: _palette(bg);
 				content: '\f00c';
 			}
 		}
 
 		&:focus + label {
 			&:before {
-				box-shadow: inset 0 0 0 2px _palette(highlight);
+				border-color: _palette(accent1);
+				box-shadow: 0 0 0 _size(border-width) _palette(accent1);
 			}
 		}
 	}
@@ -135,6 +192,7 @@
 	input[type="checkbox"] {
 		& + label {
 			&:before {
+				border-radius: _size(border-radius);
 			}
 		}
 	}
@@ -145,29 +203,4 @@
 				border-radius: 100%;
 			}
 		}
-	}
-
-	::-webkit-input-placeholder {
-		color: _palette(fg-light) !important;
-		opacity: 1.0;
-	}
-
-	:-moz-placeholder {
-		color: _palette(fg-light) !important;
-		opacity: 1.0;
-	}
-
-	::-moz-placeholder {
-		color: _palette(fg-light) !important;
-		opacity: 1.0;
-	}
-
-	:-ms-input-placeholder {
-		color: _palette(fg-light) !important;
-		opacity: 1.0;
-	}
-
-	.formerize-placeholder {
-		color: _palette(fg-light) !important;
-		opacity: 1.0;
 	}
