--- a/static/assets/sass/components/_icon.scss
+++ b/static/assets/sass/components/_icon.scss
@@ -1,9 +1,5 @@
-@import '../libs/vars';
-@import '../libs/functions';
-@import '../libs/mixins';
-
 ///
-/// Magnetic by Pixelarity
+/// Phantom by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -19,13 +15,36 @@
 			display: none;
 		}
 
-		&.major {
-			display: block;
-			margin: 0 0 (_size(element-margin) * 0.75) 0;
+		&.style1 {
+		}
+
+		&.style2 {
+			@include vendor('transition', (
+				'background-color #{_duration(transition)} ease-in-out',
+				'color #{_duration(transition)} ease-in-out',
+				'border-color #{_duration(transition)} ease-in-out'
+			));
+			background-color: transparent;
+			border: solid 1px _palette(border);
+			border-radius: _size(border-radius);
+			width: 2.65em;
+			height: 2.65em;
+			display: inline-block;
+			text-align: center;
+			line-height: 2.65em;
+			color: inherit;
 
 			&:before {
-				font-size: 2rem;
-				line-height: 2rem;
+				font-size: 1.1em;
+			}
+
+			&:hover {
+				color: _palette(accent1);
+				border-color: _palette(accent1);
+			}
+
+			&:active {
+				background-color: transparentize(_palette(accent1), 0.9);
 			}
 		}
 	}
