--- a/static/assets/sass/components/_list.scss
+++ b/static/assets/sass/components/_list.scss
@@ -1,9 +1,5 @@
-@import '../libs/vars';
-@import '../libs/functions';
-@import '../libs/mixins';
-
 ///
-/// Magnetic by Pixelarity
+/// Phantom by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -34,7 +30,7 @@
 			padding-left: 0;
 
 			li {
-				border-top: solid 1px _palette(border);
+				border-top: solid _size(border-width) _palette(border);
 				padding: 0.5em 0;
 
 				&:first-child {
@@ -44,43 +40,15 @@
 			}
 		}
 
-		&.contact {
-			list-style: none;
-			padding: 0;
-
-			li {
-				@include icon;
-				padding: 0.65em 0 0 0;
-
-				&:before {
-					display: inline-block;
-					width: 2.1em;
-				}
-
-				&:first-child {
-					padding-top: 0;
-				}
-			}
-		}
-
 		&.icons {
 			cursor: default;
 			list-style: none;
 			padding-left: 0;
+			margin: -1em 0 _size(element-margin) -1em;
 
 			li {
 				display: inline-block;
-				padding: 0 1em 0 0;
-
-				&:last-child {
-					padding-right: 0;
-				}
-
-				.icon {
-					&:before {
-						font-size: 1.5em;
-					}
-				}
+				padding: 1em 0 0 1em;
 			}
 		}
 
@@ -91,27 +59,27 @@
 
 			li {
 				display: inline-block;
-				padding: 0 (_size(element-margin) * 0.75) 0 0;
+				padding: 0 (_size(element-margin) * 0.5) 0 0;
 				vertical-align: middle;
 
 				&:last-child {
-					padding-right: 0 !important;
+					padding-right: 0;
 				}
 			}
 
 			&.small {
 				li {
-					padding: 0 (_size(element-margin) * 0.5) 0 0;
+					padding: 0 (_size(element-margin) * 0.25) 0 0;
 				}
 			}
 
 			&.vertical {
 				li {
 					display: block;
-					padding: (_size(element-margin) * 0.75) 0 0 0;
+					padding: (_size(element-margin) * 0.5) 0 0 0;
 
 					&:first-child {
-						padding-top: 0 !important;
+						padding-top: 0;
 					}
 
 					> * {
@@ -121,7 +89,7 @@
 
 				&.small {
 					li {
-						padding: (_size(element-margin) * 0.5) 0 0 0;
+						padding: (_size(element-margin) * 0.25) 0 0 0;
 
 						&:first-child {
 							padding-top: 0;
@@ -132,14 +100,14 @@
 
 			&.fit {
 				display: table;
-				margin-left: (_size(element-margin) * -0.75);
+				margin-left: (_size(element-margin) * -0.5);
 				padding: 0;
 				table-layout: fixed;
-				width: calc(100% + #{(_size(element-margin) * 0.75)});
+				width: calc(100% + #{(_size(element-margin) * 0.5)});
 
 				li {
 					display: table-cell;
-					padding: 0 0 0 (_size(element-margin) * 0.75);
+					padding: 0 0 0 (_size(element-margin) * 0.5);
 
 					> * {
 						margin-bottom: 0;
@@ -147,52 +115,46 @@
 				}
 
 				&.small {
-					margin-left: (_size(element-margin) * -0.5);
-					width: calc(100% + #{(_size(element-margin) * 0.5)});
+					margin-left: (_size(element-margin) * -0.25);
+					width: calc(100% + #{(_size(element-margin) * 0.25)});
 
 					li {
-						padding: 0 0 0 (_size(element-margin) * 0.5);
+						padding: 0 0 0 (_size(element-margin) * 0.25);
 					}
 				}
 			}
 
 			@include breakpoint(xsmall) {
+				margin: 0 0 _size(element-margin) 0;
+
 				li {
-					padding: 0 (_size(element-margin) * 0.5) 0 0;
-				}
+					padding: (_size(element-margin) * 0.5) 0 0 0;
+					display: block;
+					text-align: center;
+					width: 100%;
 
-				&.small {
-					li {
-						padding: 0 (_size(element-margin) * 0.35) 0 0;
-					}
-				}
-
-				&.vertical {
-					li {
-						padding: (_size(element-margin) * 0.5) 0 0 0;
+					&:first-child {
+						padding-top: 0;
 					}
 
-					&.small {
-						li {
-							padding: (_size(element-margin) * 0.35) 0 0 0;
+					> * {
+						width: 100%;
+						margin: 0 !important;
+
+						&.icon {
+							&:before {
+								margin-left: -2em;
+							}
 						}
 					}
 				}
 
-				&.fit {
-					margin-left: (_size(element-margin) * -0.5);
-					width: calc(100% + #{(_size(element-margin) * 0.5)});
-
+				&.small {
 					li {
-						padding: 0 0 0 (_size(element-margin) * 0.5);
-					}
+						padding: (_size(element-margin) * 0.25) 0 0 0;
 
-					&.small {
-						margin-left: (_size(element-margin) * -0.35);
-						width: calc(100% + #{(_size(element-margin) * 0.35)});
-
-						li {
-							padding: 0 0 0 (_size(element-margin) * 0.35);
+						&:first-child {
+							padding-top: 0;
 						}
 					}
 				}
