--- a/static/assets/sass/ie8.scss
+++ b/static/assets/sass/ie8.scss
@@ -4,17 +4,19 @@
 @import 'libs/skel';
 
 /*
-	Magnetic by Pixelarity
+	Phantom by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
 
-/* Basic */
+/* Form */
 
-	body {
-		background-image: url('../../images/bg.jpg');
-		background-size: cover;
-		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+	form {
+		.field {
+			float: none !important;
+			width: 100% !important;
+			padding-left: 0 !important;
+		}
 	}
 
 /* Button */
@@ -24,37 +26,51 @@
 	input[type="button"],
 	button,
 	.button {
-		border: solid 1px _palette(fg-bold) !important;
+		border: solid 2px _palette(fg) !important;
+
+		&:hover {
+			border-color: _palette(accent1) !important;
+		}
 
 		&.special {
-			border: 0 !important;
+			border: none !important;
 		}
 	}
 
-/* Form */
+/* Tiles */
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	input[type="tel"],
-	select {
-		line-height: _size(element-height);
+	.tiles {
+		article {
+			> .image {
+				&:before, &:after {
+					display: none;
+				}
+			}
+		}
 	}
 
-/* Banner */
+/* Header */
 
-	#banner {
-		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
-
-		&:before {
-  			display: none;
+	#header {
+		.logo {
+			.symbol {
+				display: none;
+			}
 		}
 
-		footer {
-			border-top: solid 1px _palette(fg-bold);
+		nav {
+			ul {
+				li {
+					a[href="#menu"] {
+						text-indent: 0;
+						width: auto;
+						font-size: 0.8em;
 
-			.actions {
-				margin-bottom: 0;
+						&:before, &:after {
+							display: none;
+						}
+					}
+				}
 			}
 		}
 	}
@@ -62,24 +78,15 @@
 /* Footer */
 
 	#footer {
-		background: _palette(bg);
-	}
+		> .inner {
+			section {
+				width: 50%;
+				margin-left: 3em;
 
-/* Menu */
-
-	#menu {
-		background: _palette(accent2);
-
-		&:before {
-			content: '\00d7';
-			cursor: pointer;
-			font-size: 3em;
-			width: 2em;
-			height: 2em;
-			line-height: 2em;
-		}
-
-		.inner {
-			background: _palette(bg);
+				&:first-child {
+					margin-left: 0;
+					width: 40%;
+				}
+			}
 		}
 	}
