--- a/static/assets/sass/ie9.scss
+++ b/static/assets/sass/ie9.scss
@@ -4,57 +4,34 @@
 @import 'libs/skel';
 
 /*
-	Magnetic by Pixelarity
+	Phantom by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
 
-	@include skel-breakpoints((
-		xlarge: '(max-width: 1680px)',
-		large: '(max-width: 1280px)'
-	));
+/* Tiles */
 
-/* Banner */
-
-	#banner {
-		header {
-			@include padding(10em, 4em, (1em, 0, 0, 0));
-			height: auto !important;
+	.tiles {
+		&:after {
+			content: '';
+			display: block;
+			clear: both;
 		}
 
-		@include breakpoint(large) {
-			header {
-				@include padding(8em, 3em, (1em, 0, 0, 0));
+		article {
+			float: left;
+
+			> a {
+				padding-top: 50%;
+				margin-top: -1.75em;
 			}
-		}
-	}
 
-/* Main */
-
-	#main {
-		.features {
-			.content {
-				&:after {
-					content: '';
-					display: block;
-					clear: both;
+			body:not(.is-touch) & {
+				&:hover {
+					> .image {
+						@include vendor('transform', 'none');
+					}
 				}
-
-				> * {
-					float: left;
-				}
-			}
-		}
-
-		.spotlight {
-			&:after {
-				content: '';
-				display: block;
-				clear: both;
-			}
-
-			> * {
-				float: left;
 			}
 		}
 	}
@@ -62,34 +39,14 @@
 /* Footer */
 
 	#footer {
-		.inner {
-			&:after {
-				content: '';
-				display: block;
-				clear: both;
-			}
-
-			> * {
+		> .inner {
+			section {
 				float: left;
 			}
-		}
-	}
 
-/* Menu */
-
-	#menu {
-		background: transparentize(_palette(accent2), 0.1);
-		text-align: center;
-
-		&:after {
-			content: '';
-			display: inline-block;
-			height: 100%;
-			vertical-align: middle;
-		}
-
-		.inner {
-			display: inline-block;
-			vertical-align: middle;
+			.copyright {
+				clear: both;
+				padding-top: (_size(element-margin) * 2);
+			}
 		}
 	}
