--- a/static/assets/sass/layout/_footer.scss
+++ b/static/assets/sass/layout/_footer.scss
@@ -1,9 +1,5 @@
-@import '../libs/vars';
-@import '../libs/functions';
-@import '../libs/mixins';
-
 ///
-/// Magnetic by Pixelarity
+/// Phantom by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -11,101 +7,132 @@
 /* Footer */
 
 	#footer {
-		background-color: _palette(bg-transparent);
+		$gutter: _size(gutter);
 
-		.inner {
+		@include padding(5em, 0, (0, 0, 3em, 0));
+		background-color: _palette(bg-alt);
+
+		> .inner {
 			@include vendor('display', 'flex');
-			@include padding(6em, 0);
-			width: _size(inner);
-			margin: 0 auto;
+			@include vendor('flex-wrap', 'wrap');
+			@include vendor('flex-direction', 'row');
 
-			> * {
-				width: 25%;
-				padding-left: 3em;
+			> * > :last-child {
+				margin-bottom: 0;
 			}
 
-			> .about {
-				width: 50%;
-				padding: 0;
+			section:nth-child(1) {
+				width: calc(66% - #{$gutter});
+				margin-right: $gutter;
 			}
-		}
 
-		.copyright {
-			@include padding(4em, 0);
-			border-top: solid 1px _palette(border);
-			text-align: center;
-
-			p {
-				font-size: 0.75em;
-				letter-spacing: _size(letter-spacing);
-				opacity: 0.4;
-				text-transform: uppercase;
-			}
-		}
-
-		@include breakpoint(xlarge) {
-			.inner {
-				@include padding(4.5em, 0);
+			section:nth-child(2) {
+				width: calc(33% - #{$gutter});
+				margin-left: $gutter;
 			}
 
 			.copyright {
-				@include padding(3em, 0);
+				width: 100%;
+				padding: 0;
+				margin-top: 5em;
+				list-style: none;
+				font-size: 0.8em;
+				color: transparentize(_palette(fg), 0.5);
+
+				a {
+					color: inherit;
+				}
+
+				li {
+					display: inline-block;
+					border-left: solid 1px transparentize(_palette(fg), 0.85);
+					line-height: 1;
+					padding: 0 0 0 1em;
+					margin: 0 0 0 1em;
+
+					&:first-child {
+						border-left: 0;
+						padding-left: 0;
+						margin-left: 0;
+					}
+				}
 			}
 		}
 
 		@include breakpoint(large) {
-			.inner {
-				@include padding(3em, 0);
-				width: calc(100% - 6em);
+			$gutter: _size(gutter) * 0.5;
 
-				> * {
-					padding-left: 2em;
+			@include padding(5em, 0);
+
+			> .inner {
+				section:nth-child(1) {
+					width: calc(66% - #{$gutter});
+					margin-right: $gutter;
 				}
-			}
 
-			.copyright {
-				@include padding(3em, 0);
+				section:nth-child(2) {
+					width: calc(33% - #{$gutter});
+					margin-left: $gutter;
+				}
 			}
 		}
 
 		@include breakpoint(medium) {
-			.inner {
-				@include vendor('flex-wrap', 'wrap');
+			$gutter: _size(gutter);
 
-				> * {
-					width: 50%;
-					padding-left: 0;
+			> .inner {
+				section:nth-child(1) {
+					width: 66%;
+					margin-right: 0;
 				}
 
-				> .about {
-					width: 100%;
-					margin: 0 0 1em 0;
+				section:nth-child(2) {
+					width: calc(33% - #{$gutter});
+					margin-left: $gutter;
 				}
 			}
 		}
 
 		@include breakpoint(small) {
-			background-color: darken(_palette(bg), 2);
+			@include padding(3em, 0);
 
-			.inner {
-				@include padding(3em, 1.5em);
-				width: 100%;
-			}
+			> .inner {
+				@include vendor('flex-direction', 'column');
 
-			.copyright {
-				@include padding(3em, 1.5em);
+				section:nth-child(1) {
+					width: 100%;
+					margin-right: 0;
+					margin: 3em 0 0 0;
+				}
+
+				section:nth-child(2) {
+					@include vendor('order', '-1');
+					width: 100%;
+					margin-left: 0;
+				}
+
+				.copyright {
+					margin-top: 3em;
+				}
 			}
 		}
 
 		@include breakpoint(xsmall) {
-			.inner {
-				> * {
-					width: 100%;
-					margin: 1em 0 0 0 !important;
-				}
+			> .inner {
+				.copyright {
+					margin-top: 3em;
 
-				> :first-child {
-					margin-top: 0;
+					li {
+						border-left: 0;
+						padding-left: 0;
+						margin: 0.75em 0 0 0;
+						display: block;
+						line-height: inherit;
+
+						&:first-child {
+							margin-top: 0;
+						}
+					}
 				}
 			}
 		}
