--- a/static/assets/sass/main.scss
+++ b/static/assets/sass/main.scss
@@ -3,10 +3,10 @@
 @import 'libs/mixins';
 @import 'libs/skel';
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,700,300italic,700italic');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900');
 
 /*
-	Magnetic by Pixelarity
+	Phantom by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
@@ -23,10 +23,19 @@
 	@include skel-layout((
 		reset: 'full',
 		boxModel: 'border',
-		grid: ( gutters: 1.75em ),
+		grid: (
+			gutters: 2em
+		),
 		breakpoints: (
-			xsmall: (
-				grid: ( gutters: 1.25em )
+			medium: (
+				grid: (
+					gutters: 1.5em
+				)
+			),
+			small: (
+				grid: (
+					gutters: 1em
+				)
 			)
 		)
 	));
@@ -38,19 +47,20 @@
 
 // Component.
 
-	@import 'components/box';
-	@import 'components/button';
-	@import 'components/form';
-	@import 'components/icon';
-	@import 'components/image';
-	@import 'components/list';
 	@import 'components/section';
+	@import 'components/icon';
+	@import 'components/list';
+	@import 'components/form';
+	@import 'components/box';
+	@import 'components/image';
 	@import 'components/table';
+	@import 'components/button';
+	@import 'components/tiles';
 
 // Layout.
 
 	@import 'layout/header';
 	@import 'layout/menu';
-	@import 'layout/banner';
 	@import 'layout/main';
 	@import 'layout/footer';
+	@import 'layout/wrapper';
