--- a/static/assets/css/ie9.css
+++ b/static/assets/css/ie9.css
@@ -1,40 +1,73 @@
 /*
-	Phantom by Pixelarity
+	Magnetic by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
 
-/* Tiles */
+/* Banner */
 
-	.tiles:after {
+	#banner header {
+		padding: 11em 4em 8em 4em ;
+		height: auto !important;
+	}
+
+	@media screen and (max-width: 1280px) {
+
+		#banner header {
+			padding: 9em 3em 6em 3em ;
+		}
+
+	}
+
+/* Main */
+
+	#main .features .content:after {
 		content: '';
 		display: block;
 		clear: both;
 	}
 
-	.tiles article {
+	#main .features .content > * {
 		float: left;
 	}
 
-		.tiles article > a {
-			padding-top: 50%;
-			margin-top: -1.75em;
-		}
+	#main .spotlight:after {
+		content: '';
+		display: block;
+		clear: both;
+	}
 
-		body:not(.is-touch) .tiles article:hover > .image {
-			-moz-transform: none;
-			-webkit-transform: none;
-			-ms-transform: none;
-			transform: none;
-		}
+	#main .spotlight > * {
+		float: left;
+	}
 
 /* Footer */
 
-	#footer > .inner section {
+	#footer .inner:after {
+		content: '';
+		display: block;
+		clear: both;
+	}
+
+	#footer .inner > * {
 		float: left;
 	}
 
-	#footer > .inner .copyright {
-		clear: both;
-		padding-top: 4em;
+/* Menu */
+
+	#menu {
+		background: rgba(97, 192, 149, 0.9);
+		text-align: center;
 	}
+
+		#menu:after {
+			content: '';
+			display: inline-block;
+			height: 100%;
+			vertical-align: middle;
+		}
+
+		#menu .inner {
+			display: inline-block;
+			vertical-align: middle;
+		}
