--- a/static/assets/sass/components/_box.scss
+++ b/static/assets/sass/components/_box.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Phantom by Pixelarity
+/// Magnetic by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -7,8 +11,7 @@
 /* Box */
 
 	.box {
-		border-radius: _size(border-radius);
-		border: solid _size(border-width) _palette(border);
+		border: solid 1px _palette(border);
 		margin-bottom: _size(element-margin);
 		padding: 1.5em;
 
