--- a/static/assets/sass/components/_button.scss
+++ b/static/assets/sass/components/_button.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Phantom by Pixelarity
+/// Magnetic by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -12,34 +16,41 @@
 	button,
 	.button {
 		@include vendor('appearance', 'none');
-		@include vendor('transition', (
-			'background-color #{_duration(transition)} ease-in-out',
-			'color #{_duration(transition)} ease-in-out',
-			'box-shadow #{_duration(transition)} ease-in-out'
-		));
-		background-color: transparent;
-		border-radius: _size(border-radius);
-		border: 0;
-		box-shadow: inset 0 0 0 (_size(border-width) * 2) _palette(fg);
-		color: _palette(fg) !important;
-		cursor: pointer;
+		@include vendor('transition', 'background-color #{_duration(transition)} ease-in-out, color #{_duration(transition)} ease-in-out');
 		display: inline-block;
-		font-size: 0.8em;
+		background-color: transparent;
+		border: 0;
+		border-radius: 0;
+		box-shadow: inset 0 0 0 1px _palette(fg-bold);
+		color: _palette(fg-bold) !important;
+		cursor: pointer;
+		font-size: 0.75em;
 		font-weight: _font(weight-bold);
-		height: 3.5em;
-		letter-spacing: _font(letter-spacing);
-		line-height: 3.45em;
-		overflow: hidden;
-		padding: 0 1.25em 0 #{1.25em + _font(letter-spacing)};
+		height: 4.25em;
+		letter-spacing: _size(letter-spacing);
+		line-height: 4.35em;
+		padding: 0 2.5em;
 		text-align: center;
 		text-decoration: none;
-		text-overflow: ellipsis;
 		text-transform: uppercase;
 		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
+
+		&:hover {
+			background-color: transparentize(_palette(fg-bold), 0.9);
+			color: _palette(fg-bold) !important;
+		}
+
+		&:active {
+			background-color: transparentize(_palette(fg-bold), 0.8);
+			color: _palette(fg-bold) !important;
+		}
 
 		&.icon {
 			&:before {
 				margin-right: 0.5em;
+				color: _palette(fg-light);
 			}
 		}
 
@@ -49,34 +60,27 @@
 			width: 100%;
 		}
 
-		&:hover {
-			color: _palette(accent1) !important;
-			box-shadow: inset 0 0 0 (_size(border-width) * 2) _palette(accent1);
-		}
-
-		&:active {
-			background-color: transparentize(_palette(accent1), 0.9);
-		}
-
 		&.small {
-			font-size: 0.6em;
+			font-size: 0.65em;
 		}
 
 		&.big {
-			font-size: 1em;
+			font-size: 0.9em;
 		}
 
 		&.special {
+			background-color: _palette(fg-bold);
 			box-shadow: none;
-			background-color: _palette(fg);
 			color: _palette(bg) !important;
 
 			&:hover {
-				background-color: _palette(accent1);
+				background-color: transparentize(_palette(fg-bold), 0.2);
 			}
 
-			&:active {
-				background-color: darken(_palette(accent1), 8);
+			&.icon {
+				&:before {
+					color: _palette(bg);
+				}
 			}
 		}
 
@@ -84,5 +88,12 @@
 		&:disabled {
 			@include vendor('pointer-events', 'none');
 			opacity: 0.25;
+		}
+
+		@include breakpoint(small) {
+			.big {
+				font-size: 0.75em;
+				line-height: 4.35em;
+			}
 		}
 	}
