--- a/static/assets/sass/components/_form.scss
+++ b/static/assets/sass/components/_form.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Phantom by Pixelarity
+/// Magnetic by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -7,65 +11,11 @@
 /* Form */
 
 	form {
-		margin: (_size(element-margin) * -0.5) 0 _size(element-margin) 0;
-
-		&:after {
-			content: '';
-			display: block;
-			clear: both;
-			height: 1px;
-		}
-
-		.field {
-			position: relative;
-			float: left;
-			margin: 0 0 (_size(element-margin) * 0.65) 0;
-			vertical-align: top;
-			width: 100%;
-		}
-
-		.half {
-			width: calc(50% + #{_size(field-gutter) * 0.5}) !important;
-			padding-left: _size(field-gutter);
-		}
-
-		.half.first {
-			width: calc(50% - #{_size(field-gutter) * 0.5}) !important;
-			padding-left: 0;
-		}
-
-		:last-child {
-			margin-bottom: 0;
-		}
-
-		.half:nth-last-child(2) {
-			margin-bottom: 0;
-		}
-
-		.actions {
-			position: relative;
-			clear: both;
-			padding-top: (_size(element-margin) * 0.5);
-		}
-
-		@include breakpoint(xsmall) {
-			.half {
-				width: 100% !important;
-				padding-left: 0;
-			}
-
-			.half.first {
-				width: 100% !important;
-				padding-left: 0;
-			}
-
-			.half:nth-last-child(2) {
-				margin: 0 0 (_size(element-margin) * 0.65) 0;
-			}
-		}
+		margin: 0 0 _size(element-margin) 0;
 	}
 
 	label {
+		color: _palette(fg-bold);
 		display: block;
 		font-size: 0.9em;
 		font-weight: _font(weight-bold);
@@ -79,14 +29,13 @@
 	select,
 	textarea {
 		@include vendor('appearance', 'none');
-		background-color: transparent;
+		background: _palette(border-bg);
 		border: none;
 		border-radius: 0;
-		border-bottom: solid _size(border-width) _palette(border);
 		color: inherit;
 		display: block;
 		outline: 0;
-		padding: 0;
+		padding: 0 1.25em;
 		text-decoration: none;
 		width: 100%;
 
@@ -95,8 +44,7 @@
 		}
 
 		&:focus {
-			border-bottom-color: _palette(accent1);
-			box-shadow: inset 0 -1px 0 0 _palette(accent1);
+			box-shadow: inset 0 0 0 2px _palette(highlight);
 		}
 	}
 
@@ -106,8 +54,8 @@
 		position: relative;
 
 		&:before {
-			color: _palette(border);
 			content: '\f078';
+			color: _palette(fg-bold);
 			display: block;
 			height: _size(element-height);
 			line-height: _size(element-height);
@@ -132,8 +80,7 @@
 	}
 
 	textarea {
-		padding: 0;
-		min-height: (_size(element-height) * 1.25);
+		padding: 1em 1.5em;
 	}
 
 	input[type="checkbox"],
@@ -158,8 +105,7 @@
 			position: relative;
 
 			&:before {
-				border-radius: _size(border-radius);
-				border: solid _size(border-width) _palette(border);
+				background: _palette(border-bg);
 				content: '';
 				display: inline-block;
 				height: (_size(element-height) * 0.6);
@@ -174,17 +120,14 @@
 
 		&:checked + label {
 			&:before {
-				background: _palette(fg);
-				border-color: _palette(fg);
-				color: _palette(bg);
+				color: _palette(fg-bold);
 				content: '\f00c';
 			}
 		}
 
 		&:focus + label {
 			&:before {
-				border-color: _palette(accent1);
-				box-shadow: 0 0 0 _size(border-width) _palette(accent1);
+				box-shadow: inset 0 0 0 2px _palette(highlight);
 			}
 		}
 	}
@@ -192,7 +135,6 @@
 	input[type="checkbox"] {
 		& + label {
 			&:before {
-				border-radius: _size(border-radius);
 			}
 		}
 	}
@@ -203,4 +145,29 @@
 				border-radius: 100%;
 			}
 		}
+	}
+
+	::-webkit-input-placeholder {
+		color: _palette(fg-light) !important;
+		opacity: 1.0;
+	}
+
+	:-moz-placeholder {
+		color: _palette(fg-light) !important;
+		opacity: 1.0;
+	}
+
+	::-moz-placeholder {
+		color: _palette(fg-light) !important;
+		opacity: 1.0;
+	}
+
+	:-ms-input-placeholder {
+		color: _palette(fg-light) !important;
+		opacity: 1.0;
+	}
+
+	.formerize-placeholder {
+		color: _palette(fg-light) !important;
+		opacity: 1.0;
 	}
