--- a/static/assets/sass/components/_image.scss
+++ b/static/assets/sass/components/_image.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Phantom by Pixelarity
+/// Magnetic by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -7,13 +11,11 @@
 /* Image */
 
 	.image {
-		border-radius: _size(border-radius);
 		border: 0;
 		display: inline-block;
 		position: relative;
 
 		img {
-			border-radius: _size(border-radius);
 			display: block;
 		}
 
@@ -55,10 +57,6 @@
 
 			img {
 				width: 100%;
-			}
-
-			@include breakpoint(small) {
-				margin: 0 0 _size(element-margin) 0;
 			}
 		}
 	}
