--- a/static/assets/sass/components/_list.scss
+++ b/static/assets/sass/components/_list.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Phantom by Pixelarity
+/// Magnetic by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -30,7 +34,7 @@
 			padding-left: 0;
 
 			li {
-				border-top: solid _size(border-width) _palette(border);
+				border-top: solid 1px _palette(border);
 				padding: 0.5em 0;
 
 				&:first-child {
@@ -40,15 +44,43 @@
 			}
 		}
 
+		&.contact {
+			list-style: none;
+			padding: 0;
+
+			li {
+				@include icon;
+				padding: 0.65em 0 0 0;
+
+				&:before {
+					display: inline-block;
+					width: 2.1em;
+				}
+
+				&:first-child {
+					padding-top: 0;
+				}
+			}
+		}
+
 		&.icons {
 			cursor: default;
 			list-style: none;
 			padding-left: 0;
-			margin: -1em 0 _size(element-margin) -1em;
 
 			li {
 				display: inline-block;
-				padding: 1em 0 0 1em;
+				padding: 0 1em 0 0;
+
+				&:last-child {
+					padding-right: 0;
+				}
+
+				.icon {
+					&:before {
+						font-size: 1.5em;
+					}
+				}
 			}
 		}
 
@@ -59,27 +91,27 @@
 
 			li {
 				display: inline-block;
-				padding: 0 (_size(element-margin) * 0.5) 0 0;
+				padding: 0 (_size(element-margin) * 0.75) 0 0;
 				vertical-align: middle;
 
 				&:last-child {
-					padding-right: 0;
+					padding-right: 0 !important;
 				}
 			}
 
 			&.small {
 				li {
-					padding: 0 (_size(element-margin) * 0.25) 0 0;
+					padding: 0 (_size(element-margin) * 0.5) 0 0;
 				}
 			}
 
 			&.vertical {
 				li {
 					display: block;
-					padding: (_size(element-margin) * 0.5) 0 0 0;
+					padding: (_size(element-margin) * 0.75) 0 0 0;
 
 					&:first-child {
-						padding-top: 0;
+						padding-top: 0 !important;
 					}
 
 					> * {
@@ -89,7 +121,7 @@
 
 				&.small {
 					li {
-						padding: (_size(element-margin) * 0.25) 0 0 0;
+						padding: (_size(element-margin) * 0.5) 0 0 0;
 
 						&:first-child {
 							padding-top: 0;
@@ -100,14 +132,14 @@
 
 			&.fit {
 				display: table;
-				margin-left: (_size(element-margin) * -0.5);
+				margin-left: (_size(element-margin) * -0.75);
 				padding: 0;
 				table-layout: fixed;
-				width: calc(100% + #{(_size(element-margin) * 0.5)});
+				width: calc(100% + #{(_size(element-margin) * 0.75)});
 
 				li {
 					display: table-cell;
-					padding: 0 0 0 (_size(element-margin) * 0.5);
+					padding: 0 0 0 (_size(element-margin) * 0.75);
 
 					> * {
 						margin-bottom: 0;
@@ -115,46 +147,52 @@
 				}
 
 				&.small {
-					margin-left: (_size(element-margin) * -0.25);
-					width: calc(100% + #{(_size(element-margin) * 0.25)});
+					margin-left: (_size(element-margin) * -0.5);
+					width: calc(100% + #{(_size(element-margin) * 0.5)});
 
 					li {
-						padding: 0 0 0 (_size(element-margin) * 0.25);
+						padding: 0 0 0 (_size(element-margin) * 0.5);
 					}
 				}
 			}
 
 			@include breakpoint(xsmall) {
-				margin: 0 0 _size(element-margin) 0;
-
 				li {
-					padding: (_size(element-margin) * 0.5) 0 0 0;
-					display: block;
-					text-align: center;
-					width: 100%;
-
-					&:first-child {
-						padding-top: 0;
-					}
-
-					> * {
-						width: 100%;
-						margin: 0 !important;
-
-						&.icon {
-							&:before {
-								margin-left: -2em;
-							}
-						}
-					}
+					padding: 0 (_size(element-margin) * 0.5) 0 0;
 				}
 
 				&.small {
 					li {
-						padding: (_size(element-margin) * 0.25) 0 0 0;
+						padding: 0 (_size(element-margin) * 0.35) 0 0;
+					}
+				}
 
-						&:first-child {
-							padding-top: 0;
+				&.vertical {
+					li {
+						padding: (_size(element-margin) * 0.5) 0 0 0;
+					}
+
+					&.small {
+						li {
+							padding: (_size(element-margin) * 0.35) 0 0 0;
+						}
+					}
+				}
+
+				&.fit {
+					margin-left: (_size(element-margin) * -0.5);
+					width: calc(100% + #{(_size(element-margin) * 0.5)});
+
+					li {
+						padding: 0 0 0 (_size(element-margin) * 0.5);
+					}
+
+					&.small {
+						margin-left: (_size(element-margin) * -0.35);
+						width: calc(100% + #{(_size(element-margin) * 0.35)});
+
+						li {
+							padding: 0 0 0 (_size(element-margin) * 0.35);
 						}
 					}
 				}
