--- a/static/assets/sass/components/_table.scss
+++ b/static/assets/sass/components/_table.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Phantom by Pixelarity
+/// Magnetic by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -17,7 +21,7 @@
 
 		tbody {
 			tr {
-				border: solid _size(border-width) _palette(border);
+				border: solid 1px _palette(border);
 				border-left: 0;
 				border-right: 0;
 
@@ -33,18 +37,21 @@
 
 		th {
 			color: _palette(fg-bold);
-			font-size: 0.9em;
+			font-size: 0.8em;
 			font-weight: _font(weight-bold);
+			letter-spacing: _size(letter-spacing);
+			line-height: 1.5;
 			padding: 0 0.75em 0.75em 0.75em;
 			text-align: left;
+			text-transform: uppercase;
 		}
 
 		thead {
-			border-bottom: solid (_size(border-width) * 2) _palette(border);
+			border-bottom: solid 1px _palette(border);
 		}
 
 		tfoot {
-			border-top: solid (_size(border-width) * 2) _palette(border);
+			border-top: solid 1px _palette(border);
 		}
 
 		&.alt {
@@ -53,18 +60,18 @@
 			tbody {
 				tr {
 					td {
-						border: solid _size(border-width) _palette(border);
+						border: solid 1px _palette(border);
 						border-left-width: 0;
 						border-top-width: 0;
 
 						&:first-child {
-							border-left-width: _size(border-width);
+							border-left-width: 1px;
 						}
 					}
 
 					&:first-child {
 						td {
-							border-top-width: _size(border-width);
+							border-top-width: 1px;
 						}
 					}
 				}
