--- a/static/assets/sass/ie8.scss
+++ b/static/assets/sass/ie8.scss
@@ -4,19 +4,17 @@
 @import 'libs/skel';
 
 /*
-	Phantom by Pixelarity
+	Magnetic by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
 
-/* Form */
+/* Basic */
 
-	form {
-		.field {
-			float: none !important;
-			width: 100% !important;
-			padding-left: 0 !important;
-		}
+	body {
+		background-image: url('../../images/bg.jpg');
+		background-size: cover;
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
 	}
 
 /* Button */
@@ -26,51 +24,37 @@
 	input[type="button"],
 	button,
 	.button {
-		border: solid 2px _palette(fg) !important;
-
-		&:hover {
-			border-color: _palette(accent1) !important;
-		}
+		border: solid 1px _palette(fg-bold) !important;
 
 		&.special {
-			border: none !important;
+			border: 0 !important;
 		}
 	}
 
-/* Tiles */
+/* Form */
 
-	.tiles {
-		article {
-			> .image {
-				&:before, &:after {
-					display: none;
-				}
-			}
-		}
+	input[type="text"],
+	input[type="password"],
+	input[type="email"],
+	input[type="tel"],
+	select {
+		line-height: _size(element-height);
 	}
 
-/* Header */
+/* Banner */
 
-	#header {
-		.logo {
-			.symbol {
-				display: none;
-			}
+	#banner {
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+
+		&:before {
+  			display: none;
 		}
 
-		nav {
-			ul {
-				li {
-					a[href="#menu"] {
-						text-indent: 0;
-						width: auto;
-						font-size: 0.8em;
+		footer {
+			border-top: solid 1px _palette(fg-bold);
 
-						&:before, &:after {
-							display: none;
-						}
-					}
-				}
+			.actions {
+				margin-bottom: 0;
 			}
 		}
 	}
@@ -78,15 +62,24 @@
 /* Footer */
 
 	#footer {
-		> .inner {
-			section {
-				width: 50%;
-				margin-left: 3em;
+		background: _palette(bg);
+	}
 
-				&:first-child {
-					margin-left: 0;
-					width: 40%;
-				}
-			}
+/* Menu */
+
+	#menu {
+		background: _palette(accent2);
+
+		&:before {
+			content: '\00d7';
+			cursor: pointer;
+			font-size: 3em;
+			width: 2em;
+			height: 2em;
+			line-height: 2em;
+		}
+
+		.inner {
+			background: _palette(bg);
 		}
 	}
