--- a/static/assets/sass/ie9.scss
+++ b/static/assets/sass/ie9.scss
@@ -4,34 +4,57 @@
 @import 'libs/skel';
 
 /*
-	Phantom by Pixelarity
+	Magnetic by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
 
-/* Tiles */
+	@include skel-breakpoints((
+		xlarge: '(max-width: 1680px)',
+		large: '(max-width: 1280px)'
+	));
 
-	.tiles {
-		&:after {
-			content: '';
-			display: block;
-			clear: both;
+/* Banner */
+
+	#banner {
+		header {
+			@include padding(10em, 4em, (1em, 0, 0, 0));
+			height: auto !important;
 		}
 
-		article {
-			float: left;
+		@include breakpoint(large) {
+			header {
+				@include padding(8em, 3em, (1em, 0, 0, 0));
+			}
+		}
+	}
 
-			> a {
-				padding-top: 50%;
-				margin-top: -1.75em;
+/* Main */
+
+	#main {
+		.features {
+			.content {
+				&:after {
+					content: '';
+					display: block;
+					clear: both;
+				}
+
+				> * {
+					float: left;
+				}
+			}
+		}
+
+		.spotlight {
+			&:after {
+				content: '';
+				display: block;
+				clear: both;
 			}
 
-			body:not(.is-touch) & {
-				&:hover {
-					> .image {
-						@include vendor('transform', 'none');
-					}
-				}
+			> * {
+				float: left;
 			}
 		}
 	}
@@ -39,14 +62,34 @@
 /* Footer */
 
 	#footer {
-		> .inner {
-			section {
-				float: left;
+		.inner {
+			&:after {
+				content: '';
+				display: block;
+				clear: both;
 			}
 
-			.copyright {
-				clear: both;
-				padding-top: (_size(element-margin) * 2);
+			> * {
+				float: left;
 			}
+		}
+	}
+
+/* Menu */
+
+	#menu {
+		background: transparentize(_palette(accent2), 0.1);
+		text-align: center;
+
+		&:after {
+			content: '';
+			display: inline-block;
+			height: 100%;
+			vertical-align: middle;
+		}
+
+		.inner {
+			display: inline-block;
+			vertical-align: middle;
 		}
 	}
