--- a/static/assets/sass/layout/_footer.scss
+++ b/static/assets/sass/layout/_footer.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Phantom by Pixelarity
+/// Magnetic by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -7,132 +11,101 @@
 /* Footer */
 
 	#footer {
-		$gutter: _size(gutter);
+		background-color: _palette(bg-transparent);
 
-		@include padding(5em, 0, (0, 0, 3em, 0));
-		background-color: _palette(bg-alt);
-
-		> .inner {
+		.inner {
 			@include vendor('display', 'flex');
-			@include vendor('flex-wrap', 'wrap');
-			@include vendor('flex-direction', 'row');
+			@include padding(6em, 0);
+			width: _size(inner);
+			margin: 0 auto;
 
-			> * > :last-child {
-				margin-bottom: 0;
+			> * {
+				width: 25%;
+				padding-left: 3em;
 			}
 
-			section:nth-child(1) {
-				width: calc(66% - #{$gutter});
-				margin-right: $gutter;
+			> .about {
+				width: 50%;
+				padding: 0;
 			}
+		}
 
-			section:nth-child(2) {
-				width: calc(33% - #{$gutter});
-				margin-left: $gutter;
+		.copyright {
+			@include padding(4em, 0);
+			border-top: solid 1px _palette(border);
+			text-align: center;
+
+			p {
+				font-size: 0.75em;
+				letter-spacing: _size(letter-spacing);
+				opacity: 0.4;
+				text-transform: uppercase;
+			}
+		}
+
+		@include breakpoint(xlarge) {
+			.inner {
+				@include padding(4.5em, 0);
 			}
 
 			.copyright {
-				width: 100%;
-				padding: 0;
-				margin-top: 5em;
-				list-style: none;
-				font-size: 0.8em;
-				color: transparentize(_palette(fg), 0.5);
-
-				a {
-					color: inherit;
-				}
-
-				li {
-					display: inline-block;
-					border-left: solid 1px transparentize(_palette(fg), 0.85);
-					line-height: 1;
-					padding: 0 0 0 1em;
-					margin: 0 0 0 1em;
-
-					&:first-child {
-						border-left: 0;
-						padding-left: 0;
-						margin-left: 0;
-					}
-				}
+				@include padding(3em, 0);
 			}
 		}
 
 		@include breakpoint(large) {
-			$gutter: _size(gutter) * 0.5;
+			.inner {
+				@include padding(3em, 0);
+				width: calc(100% - 6em);
 
-			@include padding(5em, 0);
-
-			> .inner {
-				section:nth-child(1) {
-					width: calc(66% - #{$gutter});
-					margin-right: $gutter;
+				> * {
+					padding-left: 2em;
 				}
+			}
 
-				section:nth-child(2) {
-					width: calc(33% - #{$gutter});
-					margin-left: $gutter;
-				}
+			.copyright {
+				@include padding(3em, 0);
 			}
 		}
 
 		@include breakpoint(medium) {
-			$gutter: _size(gutter);
+			.inner {
+				@include vendor('flex-wrap', 'wrap');
 
-			> .inner {
-				section:nth-child(1) {
-					width: 66%;
-					margin-right: 0;
+				> * {
+					width: 50%;
+					padding-left: 0;
 				}
 
-				section:nth-child(2) {
-					width: calc(33% - #{$gutter});
-					margin-left: $gutter;
+				> .about {
+					width: 100%;
+					margin: 0 0 1em 0;
 				}
 			}
 		}
 
 		@include breakpoint(small) {
-			@include padding(3em, 0);
+			background-color: darken(_palette(bg), 2);
 
-			> .inner {
-				@include vendor('flex-direction', 'column');
+			.inner {
+				@include padding(3em, 1.5em);
+				width: 100%;
+			}
 
-				section:nth-child(1) {
-					width: 100%;
-					margin-right: 0;
-					margin: 3em 0 0 0;
-				}
-
-				section:nth-child(2) {
-					@include vendor('order', '-1');
-					width: 100%;
-					margin-left: 0;
-				}
-
-				.copyright {
-					margin-top: 3em;
-				}
+			.copyright {
+				@include padding(3em, 1.5em);
 			}
 		}
 
 		@include breakpoint(xsmall) {
-			> .inner {
-				.copyright {
-					margin-top: 3em;
+			.inner {
+				> * {
+					width: 100%;
+					margin: 1em 0 0 0 !important;
+				}
 
-					li {
-						border-left: 0;
-						padding-left: 0;
-						margin: 0.75em 0 0 0;
-						display: block;
-						line-height: inherit;
-
-						&:first-child {
-							margin-top: 0;
-						}
-					}
+				> :first-child {
+					margin-top: 0;
 				}
 			}
 		}
