--- a/static/assets/sass/layout/_menu.scss
+++ b/static/assets/sass/layout/_menu.scss
@@ -1,163 +1,184 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Phantom by Pixelarity
+/// Magnetic by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
 
 /* Menu */
 
-	#wrapper {
-		@include vendor('transition', 'opacity #{_duration(menu)} ease');
-		opacity: 1;
+	#page-wrapper {
+		@include vendor('transition', 'filter 0s ease');
 	}
 
 	#menu {
-		@include vendor('transform', 'translateX(#{_size(menu)})');
-		@include vendor('transition', ('transform #{_duration(menu)} ease', 'visibility #{_duration(menu)}'));
+		@include vendor('display', 'flex');
+		@include vendor('flex-direction', 'column');
+		@include vendor('justify-content', 'center');
+		@include vendor('align-items', 'center');
+		@include vendor('pointer-events', 'none');
+		@include vendor('transition', (
+			'opacity 0.25s ease-out',
+			'visibility 0.25s'
+		));
+		@include vendor('background-image', (
+			'url("images/overlay.png")',
+			'url("images/menu-bg.svg")',
+			'linear-gradient(45deg, #{transparentize(_palette(accent1), 0.25)} 20%, #{transparentize(_palette(accent2), 0.015)} 80%)'
+		));
+		background-size: 100px 100px, cover, cover;
+		background-position: center, center, center;
+		-webkit-tap-highlight-color: rgba(0,0,0,0);
 		position: fixed;
 		top: 0;
-		right: 0;
-		width: _size(menu);
-		max-width: 80%;
+		left: 0;
+		width: 100%;
 		height: 100%;
-		-webkit-overflow-scrolling: touch;
-		background: _palette(fg);
-		color: _palette(bg);
-		cursor: default;
+		opacity: 0;
 		visibility: hidden;
-		z-index: _misc(z-index-base) + 2;
+		z-index: _misc(z-index-base);
 
-		> .inner {
-			@include vendor('transition', 'opacity #{_duration(menu)} ease');
-			-webkit-overflow-scrolling: touch;
+		&:before {
+			content: '';
 			position: absolute;
 			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			padding: 2.75em;
+			right: 0;
+			width: 6em;
+			height: 6em;
+			line-height: 6em;
+			background-image: url('images/close.svg');
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: 3.5em 3.5em;
+			cursor: pointer;
+			text-align: center;
+		}
+
+		.inner {
+			@include padding(3.5em, 2.5em);
+			@include vendor('transform', 'perspective(500px) rotateX(-20deg)');
+			@include vendor('transition', (
+				'opacity 0.5s ease-out',
+				'transform 0.5s ease-out'
+			));
+			@include vendor('transition-delay', '0.5s');
+			-webkit-overflow-scrolling: touch;
+			width: 23em;
+			background: transparentize(_palette(bg), 0.1);
 			opacity: 0;
+			overflow-x: hidden;
 			overflow-y: auto;
+			text-align: center;
 
-			> ul {
-				list-style: none;
-				margin: 0 0 (_size(element-margin) * 0.5) 0;
-				padding: 0;
+			h2 {
+				margin-bottom: _size(element-margin) * 0.5;
 
-				> li {
+				&:after {
+					display: none;
+				}
+			}
+
+			ul {
+				&.links {
+					list-style: none;
 					padding: 0;
-					border-top: solid 1px transparentize(_palette(bg), 0.85);
 
-					a {
-						display: block;
-						padding: 1em 0;
-						line-height: 1.5;
-						border: 0;
-						color: inherit;
+					li {
+						border-top: solid 1px _palette(border);
+						padding: 0;
+
+						a {
+							display: block;
+							padding: 1em 0;
+							border: 0;
+							font-size: 0.9em;
+							text-transform: uppercase;
+							letter-spacing: _size(letter-spacing);
+						}
+
+						&:first-child {
+							border-top: 0;
+						}
 					}
 
-					&:first-child {
-						border-top: 0;
-						margin-top: -1em;
+					& + ul {
+						margin-top: (_size(element-margin) * -0.5);
+					}
+				}
+
+				&.actions {
+					li {
+						a {
+							font-size: 0.9em !important;
+						}
 					}
 				}
 			}
 		}
 
-		> .close {
-			@include vendor('transition', (
-				'opacity #{_duration(menu)} ease',
-				'transform #{_duration(menu)} ease'
-			));
-			@include vendor('transform', 'scale(0.25) rotate(180deg)');
-			-webkit-tap-highlight-color: transparent;
-			display: block;
-			position: absolute;
-			top: 2em;
-			left: -6em;
-			width: 6em;
-			text-indent: 6em;
-			height: 3em;
-			border: 0;
-			font-size: 1em;
-			opacity: 0;
-			overflow: hidden;
-			padding: 0;
-			white-space: nowrap;
-
-			&:before, &:after {
-				@include vendor('transition', 'opacity #{_duration(transition)} ease');
-				content: '';
-				display: block;
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				background-position: center;
-				background-repeat: no-repeat;
-				background-size: 2em 2em;
-			}
-
-			&:before {
-				background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" preserveAspectRatio="none"><style>line { stroke-width: 8px; stroke: #{_palette(accent1)}; }</style><line x1="15" y1="15" x2="85" y2="85" /><line x1="85" y1="15" x2="15" y2="85" /></svg>');
-				opacity: 0;
-			}
-
-			&:after {
-				background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" preserveAspectRatio="none"><style>line { stroke-width: 8px; stroke: #{_palette(fg)}; }</style><line x1="15" y1="15" x2="85" y2="85" /><line x1="85" y1="15" x2="15" y2="85" /></svg>');
-				opacity: 1;
-			}
-
-			&:hover {
-				&:before {
-					opacity: 1;
-				}
-
-				&:after {
-					opacity: 0;
-				}
+		@include breakpoint(large) {
+			.inner {
+				@include padding(2.5em, 2em);
+				width: 21em;
 			}
 		}
 
 		@include breakpoint(small) {
-			@include vendor('transform', 'translateX(#{_size(menu) * 0.75})');
-			width: (_size(menu) * 0.75);
+			background-size: 100px 100px, 450%, cover;
 
-			> .inner {
-				padding: 2.75em 1.5em;
+			&:before {
+				width: 2.5em;
+				height: 2.5em;
+				line-height: 2.5em;
+				background-size: 2em 2em;
 			}
 
-			> .close {
-				top: 0.5em;
-				left: -4.25em;
-				width: 4.25em;
-				text-indent: 4.25em;
+			.inner {
+				ul {
+					&.links {
+						li {
+							a {
+								font-size: 0.8em;
+							}
+						}
+					}
 
-				&:before, &:after {
-					background-size: 1.5em 1.5em;
+					&.actions {
+						li {
+							a {
+								font-size: 0.8em !important;
+							}
+						}
+					}
 				}
+			}
+		}
+
+		@include breakpoint(xsmall) {
+			.inner {
+				width: calc(100% - 4em);
+				margin: 2.5em 0;
 			}
 		}
 	}
 
 	body.is-menu-visible {
-		#wrapper {
-			@include vendor('pointer-events', 'none');
-			cursor: default;
-			opacity: 0.25;
+		#page-wrapper {
+			@include vendor('filter', 'blur(8px)');
+			@include vendor('transition', 'filter 0.25s ease');
 		}
 
 		#menu {
-			@include vendor('transform', 'translateX(0)');
+			@include vendor('pointer-events', 'auto');
+			opacity: 1;
 			visibility: visible;
 
-			> * {
-				opacity: 1;
-			}
-
-			.close {
-				@include vendor('transform', 'scale(1.0) rotate(0deg)');
+			.inner {
+				@include vendor('transform', 'rotateX(0)');
+				@include vendor('transition-delay', '0.125s');
 				opacity: 1;
 			}
 		}
