--- a/static/assets/sass/main.scss
+++ b/static/assets/sass/main.scss
@@ -3,10 +3,10 @@
 @import 'libs/mixins';
 @import 'libs/skel';
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,700,300italic,700italic');
 
 /*
-	Phantom by Pixelarity
+	Magnetic by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
@@ -23,19 +23,10 @@
 	@include skel-layout((
 		reset: 'full',
 		boxModel: 'border',
-		grid: (
-			gutters: 2em
-		),
+		grid: ( gutters: 1.75em ),
 		breakpoints: (
-			medium: (
-				grid: (
-					gutters: 1.5em
-				)
-			),
-			small: (
-				grid: (
-					gutters: 1em
-				)
+			xsmall: (
+				grid: ( gutters: 1.25em )
 			)
 		)
 	));
@@ -47,20 +38,19 @@
 
 // Component.
 
-	@import 'components/section';
-	@import 'components/icon';
-	@import 'components/list';
-	@import 'components/form';
 	@import 'components/box';
-	@import 'components/image';
-	@import 'components/table';
 	@import 'components/button';
-	@import 'components/tiles';
+	@import 'components/form';
+	@import 'components/icon';
+	@import 'components/image';
+	@import 'components/list';
+	@import 'components/section';
+	@import 'components/table';
 
 // Layout.
 
 	@import 'layout/header';
 	@import 'layout/menu';
+	@import 'layout/banner';
 	@import 'layout/main';
 	@import 'layout/footer';
-	@import 'layout/wrapper';
